--- a/.github/workflows/devsecops-workflow.yaml
+++ b/.github/workflows/devsecops-workflow.yaml
@@ -31,7 +31,7 @@ jobs:
         uses: snyk/actions/node@master
         continue-on-error: true
         env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKENS }}
   zap_scan:
     runs-on: ubuntu-latest
     needs: security
