--- a/.github/workflows/devsecops-workflow.yaml
+++ b/.github/workflows/devsecops-workflow.yaml
@@ -19,8 +19,8 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
         args: >
-          -Dsonar.organization=devsecopsgithubactionsnodejsproject
-          -Dsonar.projectKey=devsecopsganodejsprojectkey
+          -Dsonar.organization=Akshay_Rao
+          -Dsonar.projectKey=aksrao
   security:
     runs-on: ubuntu-latest
     needs: build
